# stackloom

./: .dockerignore  .foundation  .gitignore  1:wq!  AGENTS.md  LICENSE  Makefile  README.md  README.zh-CN.md  branding.config.ts  package.json
backend/: Cargo.toml  README.md  config.yml.prod
backend/crates/api-grpc/: Cargo.toml
backend/crates/api-http/: Cargo.toml
backend/crates/api-http/src/: lib.rs  object_storage.rs  request_logging.rs
backend/crates/api-http/src/auth/: mod.rs
backend/crates/api-http/src/base/: logging.rs  mod.rs
backend/crates/api-http/src/openapi/: mod.rs
backend/crates/api-http/src/shared/: mod.rs
backend/crates/api-http/src/system/: mod.rs
backend/crates/api-http/src/web/: mod.rs
backend/crates/app/: Cargo.toml
backend/crates/app/src/: diesel_init.rs  diesel_migrations.rs  email_init.rs  lib.rs  redis_init.rs  sms_init.rs  sqlx_init.rs  sqlx_migrations.rs
backend/crates/app/src/jobs/: log_cleanup_job.rs  mod.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: lib.rs
backend/crates/common/src/config/: env_config.rs
backend/crates/common/src/core/: biz_error.rs  constants.rs  enums.rs  file_compress.rs  id_utils.rs  mod.rs  retry.rs
backend/crates/domain-auth/: Cargo.toml
backend/crates/domain-auth/src/: lib.rs  repo.rs  service.rs
backend/crates/domain-auth/src/oauth/: mod.rs  provider.rs  repo.rs  service.rs
backend/crates/domain-base/: Cargo.toml
backend/crates/domain-base/src/: lib.rs
backend/crates/domain-base/src/dict/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/log_retention_policy/: mod.rs  repo.rs
backend/crates/domain-base/src/menu/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/notification/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/operation_log/: repo.rs  service.rs
backend/crates/domain-base/src/perm/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/role/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/role_menu/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/role_perm/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/shared_context/: mod.rs  service.rs
backend/crates/domain-base/src/stats/: mod.rs  service.rs
backend/crates/domain-base/src/tenant/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/tenant_apply/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/user/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/user_tenant/: mod.rs  repo.rs  service.rs
backend/crates/domain-base/src/user_tenant_role/: mod.rs  repo.rs  service.rs
backend/crates/domain-system/: Cargo.toml
backend/crates/domain-system/src/: lib.rs
backend/crates/domain-system/src/audit_log/: mod.rs  repo.rs  service.rs
backend/crates/domain-system/src/aws/: mod.rs
backend/crates/domain-system/src/monitor/: mod.rs  repo.rs  service.rs
backend/crates/domain-system/src/system_log/: mod.rs  repo.rs  service.rs
backend/crates/domain-web/: Cargo.toml
backend/crates/domain-web/src/: lib.rs
backend/crates/domain-web/src/operation_log/: mod.rs  repo.rs
backend/crates/infra-auth/: Cargo.toml
backend/crates/infra-auth/src/: lib.rs  repo.rs  service.rs
backend/crates/infra-auth/src/oauth/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/: Cargo.toml
backend/crates/infra-base/src/: lib.rs
backend/crates/infra-base/src/audit_log/: service.rs
backend/crates/infra-base/src/dict/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/log_retention_policy/: mod.rs  repo.rs
backend/crates/infra-base/src/menu/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/notification/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/operation_log/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/perm/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/role/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/role_menu/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/role_perm/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/shared_context/: mod.rs  service.rs
backend/crates/infra-base/src/stats/: mod.rs  service.rs
backend/crates/infra-base/src/system_log/: service.rs
backend/crates/infra-base/src/tenant/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/tenant_apply/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/user/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/user_tenant/: mod.rs  repo.rs  service.rs
backend/crates/infra-base/src/user_tenant_role/: mod.rs  repo.rs  service.rs
backend/crates/infra-system/: Cargo.toml
backend/crates/infra-system/src/: lib.rs
backend/crates/infra-system/src/audit_log/: mod.rs  repo.rs
backend/crates/infra-system/src/aws/: browse.rs  mod.rs  remote_upload.rs  service.rs
backend/crates/infra-system/src/monitor/: mod.rs  (+3 more)
backend/crates/infra-web/: Cargo.toml
backend/crates/infra-web/src/: lib.rs
backend/migrations/basemigrate/: 20260422142946_create_users.sql  20260423025637_create_tenants.sql  20260423030000_create_user_tenants.sql  20260423030100_create_roles.sql  20260423030200_create_menus.sql  20260423030300_create_perms.sql  20260423030400_create_user_tenant_roles.sql  20260423030500_create_role_menus.sql  20260423030600_create_role_perms.sql  20260423030700_create_dicts.sql  20260423030800_create_system_logs.sql  20260423030900_create_audit_logs.sql  20260427000100_add_parent_id_to_tenants.sql  20260502000000_create_operation_logs.sql  20260506160000_alter_system_logs_ip_to_text.sql  20260507180000_seed_initial_data.sql  20260508000000_seed_perms.sql  20260509030000_add_tenant_tree_indexes.sql  20260509050000_create_log_retention_policies.sql  20260511000000_create_notifications.sql  20260511010000_extend_notification_rules_for_scheduling.sql  20260512000000_create_user_login_events.sql  20260513000000_create_oauth_clients.sql  20260513010000_create_oauth_tokens.sql  20260513020000_create_oauth_providers.sql  README.md
backend/scripts/: new_backend_module.sh  new_module.sh
(+639 files in other folders)
