[workspace]
resolver = "2"
members = [
  "bin/monolith",
  "crates/api-grpc",
  "crates/api-http",
  "crates/app",
  "crates/common",
  "crates/domain-auth",
  "crates/domain-base",
  "crates/domain-web",
  "crates/domain-system",
  "crates/infra-auth",
  "crates/infra-base",
  "crates/infra-web",
  "crates/infra-system",
]

default-members = ["bin/monolith"]

[workspace.package]
version = "0.1.0"
authors = ["jerrychir <jerrychir@gmail.com>"]
edition = "2024"

[workspace.dependencies]
#
# crates
#
api-grpc = { path = "crates/api-grpc" }
api-http = { path = "crates/api-http" }
app = { path = "crates/app" }
common = { path = "crates/common" }
domain-base = { path = "crates/domain-base" }
domain-auth = { path = "crates/domain-auth" }
domain-web = { path = "crates/domain-web" }
domain-system = { path = "crates/domain-system" }
infra-auth = { path = "crates/infra-auth" }
infra-base = { path = "crates/infra-base" }
infra-edu = { path = "crates/infra-web" }
infra-system = { path = "crates/infra-system" }
infra-web = { path = "crates/infra-web" }


#
# bin
#
monolith = { path = "bin/monolith" }

#
# schemas
#

#
# dependencies
#
neocrates = { path = "../../neocrates" }
axum = "0.8"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
] }

# web scraping
scraper = "0.26"
chromiumoxide = '0.9'
fantoccini = "0.22"
headless_chrome = "1"

# database
diesel = "2"
diesel_migrations = "2"
chrono = "0.4"
sqlx = "0.8"

# core
serde = "1"
serde_json = "1"
clap = "4"
bon = "3.8"
validator = "0.20"
futures-util = "0.3"
toml = "1.0"

# mq queue
apalis = "0.7"
apalis-redis = { version = "0.7" }

lopdf = "0.40"
image = { version = "0.25", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
