[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crates
common.workspace = true
api-http.workspace = true
domain-base.workspace = true
domain-web.workspace = true
infra-web.workspace = true
infra-base.workspace = true
infra-system.workspace = true
infra-auth.workspace = true


# dependencies
neocrates = { workspace = true, features = [
  "web",
  "logger",
  "redis",
  "diesel",
  "sms",
  "email",
  "sqlx",
] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
diesel.workspace = true
diesel_migrations.workspace = true
apalis = { workspace = true, features = ["limit"] }
apalis-redis.workspace = true
serde = { workspace = true }
