[package]
name = "domain-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members
domain-base.workspace = true

# dependencies
neocrates = { workspace = true, features = ["logger", "web", "auth"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
