[package]
name = "domain-base"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members

# dependencies
neocrates = { workspace = true, features = ["logger", "web"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
serde_json.workspace = true
