[package]
name = "domain-system"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members

# dependencies
neocrates = { workspace = true, features = ["logger", "aws"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
