[package]
name = "infra-base"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members
domain-base.workspace = true

# dependencies
neocrates = { workspace = true, features = ["logger", "diesel", "crypto"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
