[package]
name = "infra-base"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members
common.workspace = true
domain-base.workspace = true

# dependencies

neocrates = { workspace = true, features = ["logger", "diesel", "crypto", "sqlx"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json"] }
