[package]
name = "infra-system"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# crate workspace members
common.workspace = true
domain-system.workspace = true

# dependencies
neocrates = { workspace = true, features = ["logger", "sqlx"] }
chrono = { workspace = true, features = ["serde"] }
bon.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json"] }

[features]
default = ["full"]
full = ["aws"]
aws = []
